# Another-World-Bytecode-Interpreter

./: CMakeLists.txt  aw.opk
opk/: default.gcw0.desktop  manual.txt  raw
src/: endian.h  main.cpp  sysImplementation.cpp
